source/sass/components/button.scss
/* ... */
a.button.button--white,
a.button.button--white:visited,
a.button.button--white:hover,
a.button.button--white:focus,
a.button.button--white:active,
a.button.button--white:visited:hover,
a.button.button--white:visited:focus,
a.button.button--white:visited:active,
.link.button.button--white,
.link.button.button--white:visited,
.link.button.button--white:hover,
.link.button.button--white:focus,
.link.button.button--white:active,
.link.button.button--white:visited:hover,
.link.button.button--white:visited:focus,
.link.button.button--white:visited:active {
  color: $color-white;
}

// Disable Municipio hover/focus overlay tint on filled/outlined buttons.
.c-button__filled:hover::after,
.c-button__filled:focus::after,
.c-button__filled:active::after,
.c-button__outlined:hover::after,
.c-button__outlined:focus::after,
.c-button__outlined:active::after {
  background: none;
  opacity: 0;
}

.c-button__outlined--primary:hover::after,
.c-button__outlined--primary:focus::after,
.c-button__outlined--primary:active::after {
  background: none;
  opacity: 0;
}

.error404 .t-404__buttons .c-button[href="javascript:history.go(-1);"] .c-icon,
.error404 .t-404__buttons .c-button[href="/"] .c-icon {
  display: none;
}

.error404 .t-404__buttons .c-button.c-button__filled.c-button__filled--secondary,
.error404 .t-404__buttons .c-button.c-button__filled.c-button__filled--secondary:visited,
.error404 .t-404__buttons .c-button.c-button__filled.c-button__filled--secondary:hover,
.error404 .t-404__buttons .c-button.c-button__filled.c-button__filled--secondary:focus,
.error404 .t-404__buttons .c-button.c-button__filled.c-button__filled--secondary:active {
  background: $color-primary-500;
  border-color: $color-primary-500;
  color: $color-white;
  text-decoration: none;
}

.error404 .t-404__buttons .c-button.c-button--lg,
.error404 .t-404__buttons .c-button.c-button--lg .c-button__label,
.error404 .t-404__buttons .c-button.c-button--lg .c-button__label-text,
.error404 .t-404__buttons .c-button.c-button--lg .c-button__label-icon {
  font-size: 1.125rem;
}

.error404 .t-404__buttons .c-button.c-button__filled.c-button__filled--secondary .c-button__label,
.error404
  .t-404__buttons
  .c-button.c-button__filled.c-button__filled--secondary
  .c-button__label-text {
  color: $color-white;
}

.error404
  .t-404__buttons
  .c-button[href="javascript:history.go(-1);"]
  .c-button__label-icon::before,
.error404 .t-404__buttons .c-button[href="/"] .c-button__label-icon::before {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-family: "Lidingo Logical", sans-serif;
  font-size: inherit;
  font-weight: 400;
  line-height: 1;
}

.error404
  .t-404__buttons
  .c-button[href="javascript:history.go(-1);"]
  .c-button__label-icon::before {
  content: ":vänster:";
}

.error404 .t-404__buttons .c-button[href="/"] .c-button__label-icon::before {
  content: ":hus:";
}

@mixin secondary-button-label-primary {
  .c-button__label,
  .c-button__label-text {
    color: $color-primary-500;
  }
}

@mixin secondary-button-overlay-reset {
  &:hover::before,
  &:hover::after,
  &:focus::before,
  &:focus::after,
  &:active::before,
  &:active::after {
    background: none !important;
    opacity: 0 !important;
  }
}

.t-401__buttons .c-button.c-button__filled.c-button__filled--secondary,
.t-401__buttons .c-button.c-button__filled.c-button__filled--secondary:visited,
.t-401__buttons .c-button.c-button__filled.c-button__filled--secondary:hover,
.t-401__buttons .c-button.c-button__filled.c-button__filled--secondary:focus,
.t-401__buttons .c-button.c-button__filled.c-button__filled--secondary:active {
  @include button-big;
  @include button-secondary;
  @include secondary-button-label-primary;
  @include secondary-button-overlay-reset;
  text-decoration: none;
}

.t-401__buttons
  .c-button.c-button__filled.c-button__filled--secondary
  .c-button__label-icon {
  color: $color-primary-500;
}

.post-password-form .c-button.c-button__filled--secondary,
.post-password-form .c-button.c-button__filled--secondary:hover,
.post-password-form .c-button.c-button__filled--secondary:focus,
.post-password-form .c-button.c-button__filled--secondary:active {
  @include button-base;
  @include button-secondary;
  @include secondary-button-label-primary;
  @include secondary-button-overlay-reset;
  text-decoration: none;
}

.t-block-container.t-block-button > a.c-button.t-block-button.c-button--lg,
.t-block-container.t-block-button > a.c-button.t-block-button.c-button--lg:visited,
.t-block-container.t-block-button > a.c-button.t-block-button.c-button--lg:hover,
.t-block-container.t-block-button > a.c-button.t-block-button.c-button--lg:focus,
.t-block-container.t-block-button > a.c-button.t-block-button.c-button--lg:active {
  @include t-block-button-big-override;
}

.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg.c-button__outlined,
.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg.c-button__outlined:visited,
.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg.c-button__outlined:hover,
.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg.c-button__outlined:focus,
.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg.c-button__outlined:active {
  @include t-block-button-big-override;
}

.t-block-container.t-block-button.button--white {
  border: 0;
  background: transparent;
}

.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg
  .c-button__label,
.t-block-container.t-block-button
  > a.c-button.t-block-button.c-button--lg
  .c-button__label-text {
  @include inherit-button-label;

  color: inherit !important;
  font: inherit !important;
  line-height: inherit !important;
}
/* ... */

